space header align fix

--- a/gui/src/App.css
+++ b/gui/src/App.css
@@ -24,6 +24,7 @@ button {
   border: 1px solid rgba(0, 0, 0, 0.3);
   cursor: pointer;
   border-radius: 3px;
+  height: 24px;
 }
 
 .button_icon {
