--- a/gui/src/Space.css
+++ b/gui/src/Space.css
@@ -4,3 +4,7 @@
   justify-content: flex-end;
   flex-wrap: wrap-reverse;    
 }
+
+.space_header {
+  display: flex;
+}
